--- a/package.json
+++ b/package.json
@@ -3,23 +3,69 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 5673",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|json|css|md|ts|tsx)\"",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "./src/**/*.js": [
+      "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    ],
+    "./src/**/*.ts": [
+      "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    ],
+    "./src/**/*.tsx": [
+      "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    ]
+  },
+  "compilerOptions": {
+    "skipLibCheck": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@hookform/resolvers": "^3.3.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "idb": "^7.1.1",
+    "lodash": "^4.17.21",
     "next": "13.5.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "postcss-nesting": "^12.0.1",
+    "prettier": "^3.0.3",
+    "ts-loader": "^9.4.4",
+    "url-loader": "^4.1.1"
   }
 }
